--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "npm": "^6.4.1"
   }
