--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "restfulapi",
+  "name": "food-express",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.15.6",
-    "fs": "^0.0.1-security",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
-    "npm": "^6.4.1"
+    "orm": "^5.0.2",
+    "static": "^2.0.0"
   }
 }
