--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.7.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "orm": "^5.0.2",
     "static": "^2.0.0"
   }
